2023-07-04  G. Branden Robinson <g.branden.robinson@gmail.com>

	* mmroff.pl: Trivially refactor.  Rename scalars.
	- `check_macro` -> `first_pass`
	- `run_macro` -> `second_pass`

2023-04-01  G. Branden Robinson <g.branden.robinson@gmail.com>

	* mmroff.pl: Document `--help` and `--version` options in usage
	message.

2023-06-30  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tests/indexing-works.sh: Add unit test.
	* mm.am (mm_TESTS): Run test.

2023-05-25  G. Branden Robinson <g.branden.robinson@gmail.com>

	* groff_mm.7.man (Macros) <INDP>: Clarify operation.

	Fixes <https://savannah.gnu.org/bugs/?64206>.

2023-02-17  G. Branden Robinson <g.branden.robinson@gmail.com>

	[mm]: Add `--help` option support to mmroff.

	* mmroff.pl: Recognize `--help` option.
	* mmroff.1.man (Synopsis, Options): Document.

2023-02-01  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m.tmac (H, SETR): Trivially refactor.  Rename register to
	conform to convention: `hd-mark-trimmed` -> `hd@mark-trimmed`.
	This register is used outside of its "module", "hd".

2023-02-01  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m.tmac (H, LI): Trivially refactor.  Annotate and test
	threshold registers consistently.

2023-02-01  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m.tmac: Fix code style nit.  Except for initial register
	tests for GNU troff formatter and compatibility mode, migrate
	special character, register, and string interpolation escape
	sequences from `(xx` form to `[xx]`.  Also rewrite an instance
	of `\nP` to `\n[P]`.

2023-01-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	When register `Pt` was 2, paragraphs immediately following
	displays and lists were being indented, contrary to DWB mm
	behavior.

	* m.tmac: Replace `par@ind-flag` register with two separate
	state bits, `par*indentation-eligible` and
	`par@suppress-indentation`.
	(P, nP): Remove complex test for deciding whether the current