@@ -1,5 +1,10 @@
 2023-07-04  G. Branden Robinson <g.branden.robinson@gmail.com>
 
+	* mmroff.pl: Honor `GROFF_BIN_PATH` environment variable.
+	* mmroff.1.man (Environment): Add section documenting this.
+
+2023-07-04  G. Branden Robinson <g.branden.robinson@gmail.com>
+
 	* mmroff.pl: Trivially refactor.  Rename scalars.
 	- `check_macro` -> `first_pass`
 	- `run_macro` -> `second_pass`
